--- a/Work with API/main.css
+++ b/Work with API/main.css
@@ -26,12 +26,17 @@ a{
   border-radius: 5px;
   box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
 }
-.launch-imgs{
+.launch-img{
     width: 100px;
     height: 100px;
 }
+.launch-img-2{
+    width: 100px;
+    height: 100px;
+    margin-left: 10px;
+}
 .divForImg{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     width: 220px;
 }
