--- a/style.css
+++ b/style.css
@@ -1,20 +1,186 @@
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
 body {
-  background-color: #222;
-  color: orange;
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* End of Reset.css */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body {
+  background: #222;
+  font-family: "Oswald", sans-serif;
+}
+
+.wrapper {
   display: flex;
   flex-direction: column;
+  text-align: center;
+}
+
+.wrapper__header {
+  font-size: 4rem;
+  padding: 1rem;
+}
+
+.header__text {
+  color: white;
+}
+
+.content__links {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  font-family: 'Ubuntu', sans-serif;
 }
-.greeting {
-  font-size: 42px;
-  font-weight: 700;
+
+.content__links-soon ,.content__links li a {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 100px;
+  font-size: 2.2rem;
+  padding: 0.5rem 0;
+  margin: 0.5rem;
+  border: 1px solid white;
+  color: white;
+  outline: none;
+  text-decoration: none;
+  transition: all 0.5s;
+  user-select: none;
 }
-a {
-  color: orange;
+
+.content__links li a:hover{
+  background-color: #fff;
+  color: #222;
 }
-ul {
-  font-size: 25px;
-  list-style: none;
-  padding: 0;
+
+.content__links-soon:hover{
+  color: #666;
 }
